# lindfors-site

./: .gitignore  TODO.md  build.sh  cv.typ  deploy.sh  wrangler.toml  zola.toml
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs
content/: about.md  search.md
content/blog/: _index.md  building-a-personal-blog-with-zola.md
content/blog/aquaculture-innovation/: index.md
content/blog/building-a-personal-blog-with-zola/: index.md
content/blog/citations-on-a-static-site/: index.md
content/blog/example-post/: index.md  references.bib
content/blog/experimentation-in-post-llm-world/: index.md
content/blog/images-on-a-static-site/: index.md
content/blog/self-hosted-newsletter/: index.md
content/blog/spectral-imaging-and-embedded-rust/: index.md
content/blog/typst-for-blogging/: index.md
sass/: style.scss
scripts/: generate-newsletter.sh  generate-pdf.sh  send-newsletter.sh
static/: robots.txt
static/newsletter/: aquaculture-innovation.html  aquaculture-innovation.md
templates/: 404.html  base.html  index.html  macros.html  page.html  search.html  section.html  simple-page.html  taxonomy_list.html  taxonomy_single.html
templates/pdf/: academic.typ
templates/shortcodes/: figure.html  katex.html  reference.html
tools/img-optim/: Cargo.toml
tools/img-optim/src/: main.rs
